# rules_go_repro

./: BUILD.bazel  README.md  WORKSPACE  go.mod
